# FileCheck-Library

./: README.md  filecheck.vala  meson.build
src/: filecheck.vala
